@@ -45,6 +45,7 @@ enum class TaskPointFactoryType : uint8_t {
   FINISH_CYLINDER,
   START_BGA,
   AAT_ANNULAR_SECTOR,
+  SYMMETRIC_QUADRANT,
 
   /**
    * This special value is used to determine the number of types
