@@ -131,6 +131,9 @@ OrderedTaskPointDescription(TaskPointFactoryType type)
   case TaskPointFactoryType::FINISH_CYLINDER:
     return _("Enter cylinder to finish.");
 
+  case TaskPointFactoryType::SYMMETRIC_QUADRANT:
+    return _("A symmetric quadrant with a custom radius.");
+
   case TaskPointFactoryType::COUNT:
     gcc_unreachable();
   }
@@ -176,6 +179,9 @@ OrderedTaskPointName(TaskPointFactoryType type)
     return _("Finish line");
   case TaskPointFactoryType::FINISH_CYLINDER:
     return _("Finish cylinder");
+
+  case TaskPointFactoryType::SYMMETRIC_QUADRANT:
+    return _("Symmetric quadrant");
 
   case TaskPointFactoryType::COUNT:
     gcc_unreachable();
