@@ -14,6 +14,7 @@ Version 6.6 - not yet released
   - show required glide ratio in waypoint details (#1573)
 * tasks
   - MAT tasks (#563)
+  - custom symmetric quadrant (#2125)
 * devices
   - Volkslogger: support IGC file download
 * Android
